[package]
name = "raws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.36.0"
aws-sdk-sts = "1.35.0"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1", features = ["full"] }
