[package]
name = "libecs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-ecs = "1.38.0"
aws-sdk-sts = "1.36.0"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.27.0"
signal-hook = "0.3.17"
tokio = { version = "1.39.2", features = ["full"] }
